[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pontuação/checkPoints.gd" type="Script" id=1]
[ext_resource path="res://Fonte/Concert_One/ConcertOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/menu_cidade.png" type="Texture" id=3]
[ext_resource path="res://sprites/botão voltar.png" type="Texture" id=4]
[ext_resource path="res://sprites/trophy-menu.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="MenuCidade" type="Sprite" parent="."]
position = Vector2( 179.889, 319.804 )
scale = Vector2( 1.60099, 1.60098 )
texture = ExtResource( 3 )

[node name="Trophy-menu" type="Sprite" parent="."]
position = Vector2( 178, 314.111 )
scale = Vector2( 1.02778, 1.02778 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="."]
margin_left = 115.0
margin_top = 31.0
margin_right = 210.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 31, 11 )
text = "Código de jogo"

[node name="Atual" type="Label" parent="."]
margin_left = 49.0
margin_top = 123.0
margin_right = 309.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 31, 11 )
text = "Seu código atual é:"
align = 1
valign = 1
autowrap = true

[node name="SaveCodeButton" type="Button" parent="."]
margin_left = 276.0
margin_top = 68.0
margin_right = 327.0
margin_bottom = 107.0
text = "OK"

[node name="Button" type="Button" parent="."]
margin_left = 22.0
margin_top = 560.0
margin_right = 96.0
margin_bottom = 624.0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="Button2" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -330.0
margin_top = 75.0
margin_right = -310.0
margin_bottom = 95.0
text = "?"

[node name="Popup" type="Popup" parent="Button2"]
margin_left = -30.0
margin_top = -75.0
margin_right = 10.0
margin_bottom = -35.0

[node name="ColorRect" type="ColorRect" parent="Button2/Popup"]
margin_left = 48.0
margin_top = 95.0
margin_right = 246.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="Button2/Popup"]
margin_left = 56.0
margin_top = 104.0
margin_right = 236.0
margin_bottom = 230.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Use seu código de jogo para continuar de onde parou da ultima vez que jogou. Sempre que quiser checar seu código atual, poderá conferi-lo aqui na aba prêmio ou pausando o jogo durante as fases."
align = 1
valign = 1
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 57.0
margin_top = 60.0
margin_right = 270.0
margin_bottom = 112.0

[connection signal="pressed" from="SaveCodeButton" to="." method="_on_SaveCodeButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_up" from="Button2" to="." method="_on_Button2_button_up"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
